--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
   "name": "ifc",
   "dependencies": {
     "bootstrap": "~3.2.0",
-    "jQuery": "~2.1.3"
+    "jQuery": "~2.1.3",
+    "font-awesome": "^4.5.0"
   }
 }
