--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "dependencies": {
     "bootstrap": "~3.2.0",
     "jQuery": "~2.1.3",
-    "font-awesome": "^4.5.0"
+    "font-awesome": "^4.5.0",
+    "backbone": "^1.3.3"
   }
 }
