--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "dependencies": {
     "bower": "latest",
     "coffee-script": "^1.10.0"
+  },
+  "scripts": {
+    "postinstall": "sudo ./node_modules/.bin/bower install --allow-root "
   }
 }
