--- a/package.json
+++ b/package.json
@@ -4,6 +4,6 @@
     "coffee-script": "^1.10.0"
   },
   "scripts": {
-    "postinstall": "sudo ./node_modules/.bin/bower install --allow-root "
+    "postinstall": "./node_modules/.bin/bower install"
   }
 }
