--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,9 @@ language: python
 python:
   - 2.7
 install: pip install -r requirements/dev.txt
+services:
+  - postgresql
+before_script:
+  - psql -c 'create database wordfor_test;' -U postgres
+  - psql -c "create user wordfor with superuser password 'wordfor123';" -U postgres
 script: python manage.py test
