--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,6 @@ services:
 before_script:
   - psql -c 'create database wpiifc_test;' -U postgres
   - psql -c "create user wpiifc with superuser password 'wpiifc123';" -U postgres
+  - IFC_ENV=test python manage.py db upgrade
+  - IFC_ENV=test python manage.py seed_db
 script: python manage.py test
