--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
     "bootstrap": "~3.2.0",
     "jQuery": "~2.1.3",
     "font-awesome": "^4.5.0",
-    "backbone": "^1.3.3"
+    "backbone": "^1.3.3",
+    "noty": "^2.3.8"
   }
 }
