--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
     "jQuery": "~2.1.3",
     "font-awesome": "^4.5.0",
     "backbone": "^1.3.3",
-    "noty": "^2.3.8"
+    "noty": "^2.3.8",
+    "animate.css": "^3.5.2"
   }
 }
