--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
     "font-awesome": "^4.5.0",
     "backbone": "^1.3.3",
     "noty": "^2.3.8",
-    "animate.css": "^3.5.2"
+    "animate.css": "^3.5.2",
+    "d3": "^4.4.0"
   }
 }
