--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
     "backbone": "^1.3.3",
     "noty": "^2.3.8",
     "animate.css": "^3.5.2",
-    "d3": "^4.4.0"
+    "d3": "^4.4.0",
+    "chart.js": "^2.7.1"
   }
 }
